samples/_failures_safe/1761523625_cdc46f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a6571de.c: In function ‘main’:
./samples/SAFE/__tmp_3a6571de.c:168:11: error: expected ‘;’ at end of input
  168 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_3a6571de.c:168:5: error: expected declaration or statement at end of input
  168 |     printf
      |     ^~~~~~
